[gd_scene load_steps=6 format=3 uid="uid://ds8aae77ps3fc"]

[ext_resource type="Script" uid="uid://dlthtkrjshg3q" path="res://hud.gd" id="1_64ctp"]
[ext_resource type="FontFile" uid="uid://b5bspum6ffekd" path="res://fonts/SourceCodePro-Bold.ttf" id="2_8sq4i"]
[ext_resource type="Texture2D" uid="uid://b5uoqn2mwnf81" path="res://rainbow_hud/rainbow_0.png" id="3_8sq4i"]

[sub_resource type="InputEventAction" id="InputEventAction_640wx"]

[sub_resource type="Shortcut" id="Shortcut_a2258"]
events = [SubResource("InputEventAction_640wx")]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_64ctp")

[node name="StartButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -174.0
offset_top = -215.0
offset_right = 174.0
offset_bottom = -80.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_8sq4i")
theme_override_font_sizes/font_size = 100
shortcut = SubResource("Shortcut_a2258")
text = "Start"

[node name="TitleLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -330.0
offset_top = -188.5
offset_right = 330.0
offset_bottom = 68.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_8sq4i")
theme_override_font_sizes/font_size = 100
text = "The Road to
Rainbow"
horizontal_alignment = 1

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Rainbow" type="TextureRect" parent="."]
offset_left = 20.0
offset_top = 20.0
offset_right = 148.0
offset_bottom = 92.0
texture = ExtResource("3_8sq4i")

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
